--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Movie App</title>
 </head>
 <body>
+    <h1>ALL TORRENT MOVIES AVAILABLE</h1>
     <div class="search-container">
         <input type="text" id="searchInput" placeholder="Search Movies">
         <button id="searchButton">Search</button>
