--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Movie App</title>
+    <title>Movie</title>
 </head>
 <body>
     <h1>ALL TORRENT MOVIES AVAILABLE</h1>
@@ -12,11 +12,12 @@
         <input type="text" id="searchInput" placeholder="Search Movies">
         <button id="searchButton">Search</button>
     </div>
-    <div class="movie-list" id="movieList">
-        <!-- Movie listings will be dynamically added here -->
-    </div>
+
     <div class="movie-detail" id="movieDetail">
         <!-- Individual movie details will be shown here -->
+    </div>
+    <div class="movie-list" id="movieList">
+        <!-- Movie listings will be dynamically added here -->
     </div>
     <script src="script.js"></script>
 </body>
